Added Transformation WildCard support compiled

--- a/README
+++ b/README
@@ -264,7 +264,7 @@ ROUTE=("10","50","WILDCARD","0115233!","110.10.0.200","5060")
 ROUTE=("11","1","NUMERIC","+525557969469","110.10.0.200","5060")
 ROUTE=("12","1","WILDCARD","4XX","110.10.0.220","5060")
 ROUTE=("13","10","NUMERIC","+14089449402","110.10.0.200","5060")
-ROUTE=("14","10","NUMERIC","+14089449402","TWILIO")
+ROUTE=("14","10","NUMERIC","+14089449402","_TWILIO_")
 
 
 ¥	Verify Opencall war file is deployed successfully.
